--- a/app/src/main/res/layout/fragment_user_list_people.xml
+++ b/app/src/main/res/layout/fragment_user_list_people.xml
@@ -62,6 +62,6 @@
         android:clipToPadding="false"
         android:divider="@color/alpha"
         android:dividerHeight="0dp"
-        android:paddingTop="33dp" />
+        android:paddingTop="@dimen/titleHeight" />
 
 </RelativeLayout>
