--- a/app/src/main/res/layout/item_dynamic_album_img.xml
+++ b/app/src/main/res/layout/item_dynamic_album_img.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="ContentDescription">
 
     <ImageView
         android:id="@+id/item_dynamic_album_img"
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:src="@drawable/img_default_animation"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
