--- a/app/src/main/res/layout/widget_dy_senddynamic.xml
+++ b/app/src/main/res/layout/widget_dy_senddynamic.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_bg_toolbar_orange"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingStart="@dimen/dimen_22_10"
+    android:paddingEnd="@dimen/dimen_24_10"
+    tools:ignore="UseCompoundDrawables,ContentDescription">
 
     <TextView
         android:id="@+id/wid_dy_title"
