--- a/app/src/main/res/layout/widget_dynamic_album.xml
+++ b/app/src/main/res/layout/widget_dynamic_album.xml
@@ -9,8 +9,8 @@
         android:id="@+id/dynamic_album_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:clickable="true"
         android:focusable="true"
         android:textColor="@color/colorHyperlinks"
@@ -21,8 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/dynamic_album_author"
-        android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginLeft="@dimen/dimen_18_10"
+        android:layout_marginRight="@dimen/dimen_18_10"
         android:layout_marginBottom="2dp"
         android:textSize="13sp"
         app:etv_MaxLinesOnShrink="6"/>
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dynamic_album_text"
         android:clipToPadding="false"
-        android:paddingStart="18dp"
-        android:paddingEnd="18dp" />
+        android:paddingStart="@dimen/dimen_18_10"
+        android:paddingEnd="@dimen/dimen_18_10" />
 
 </RelativeLayout>
