--- a/app/src/main/res/layout/widget_recommend_update.xml
+++ b/app/src/main/res/layout/widget_recommend_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_recommend_update_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,10 +9,11 @@
     android:focusable="true"
     android:gravity="center"
     android:orientation="horizontal"
+    android:paddingLeft="10dp"
+    android:paddingTop="6dp"
+    android:paddingRight="10dp"
     android:paddingBottom="6dp"
-    android:paddingLeft="18dp"
-    android:paddingRight="18dp"
-    android:paddingTop="6dp">
+    tools:ignore="ContentDescription,SmallSp">
 
     <ImageView
         android:layout_width="24dp"
