--- a/app/src/main/res/layout/activity_favor_video.xml
+++ b/app/src/main/res/layout/activity_favor_video.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:divider="@null"
-            android:paddingTop="33dp" />
+            android:paddingTop="@dimen/titleHeight" />
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
     <cn.luern0313.wristbilibili.widget.TitleView
