--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary">
@@ -12,6 +11,8 @@
         android:clipToPadding="false"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:paddingTop="25dp"
-        android:paddingBottom="25dp" />
+        android:listSelector="@android:color/transparent"
+        android:paddingTop="@dimen/dimen_25_10"
+        android:paddingBottom="@dimen/dimen_25_10" />
+
 </RelativeLayout>
