--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -19,10 +19,10 @@
             android:id="@+id/text_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
+            android:layout_marginLeft="@dimen/dimen_28_10"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginRight="@dimen/dimen_28_10"
+            android:layout_marginBottom="@dimen/dimen_30_6"
             android:textSize="12sp" />
     </LinearLayout>
 </ScrollView>
