--- a/app/src/main/res/layout/fragment_aniremind.xml
+++ b/app/src/main/res/layout/fragment_aniremind.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription,UseCompoundDrawables">
+
+    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
+        android:id="@+id/ar_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/ar_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:divider="@color/alpha"
+            android:dividerHeight="3dp"
+            android:paddingTop="@dimen/titleHeight"
+            android:paddingBottom="22dp" />
+    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
     <LinearLayout
         android:id="@+id/ar_nologin"
@@ -36,7 +54,6 @@
         android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="33dp"
         android:visibility="gone">
 
         <ImageView
