--- a/app/src/main/res/layout/fragment_dynamic_detail.xml
+++ b/app/src/main/res/layout/fragment_dynamic_detail.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:orientation="vertical"
-    android:paddingTop="33dp"
-    android:paddingBottom="32dp">
+    android:paddingTop="@dimen/titleHeight"
+    android:paddingBottom="@dimen/dimen_32_10">
 
     <include
         layout="@layout/item_dynamic"
