--- a/app/src/main/res/layout/fragment_video_recommend.xml
+++ b/app/src/main/res/layout/fragment_video_recommend.xml
@@ -11,8 +11,8 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:divider="@color/alpha"
-        android:paddingTop="33dp"
-        android:paddingBottom="22dp" />
+        android:paddingTop="@dimen/titleHeight"
+        android:paddingBottom="@dimen/dimen_22_0" />
 
     <LinearLayout
         android:id="@+id/vd_recommend_nothing"
