--- a/app/src/main/res/layout/item_article_article.xml
+++ b/app/src/main/res/layout/item_article_article.xml
@@ -3,12 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="28dp"
-    android:paddingEnd="28dp"
-    android:paddingBottom="6dp"
-    android:descendantFocusability="blocksDescendants"
-    android:clickable="true"
-    android:focusable="true">
+    android:paddingStart="@dimen/dimen_26_14"
+    android:paddingEnd="@dimen/dimen_26_14"
+    android:paddingBottom="6dp">
 
     <org.sufficientlysecure.htmltextview.HtmlTextView
         android:id="@+id/item_article_article_textview"
