--- a/app/src/main/res/layout/item_dynamic.xml
+++ b/app/src/main/res/layout/item_dynamic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_dynamic_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,7 +8,8 @@
     android:clickable="true"
     android:descendantFocusability="blocksDescendants"
     android:focusable="true"
-    android:paddingTop="2dp">
+    android:paddingTop="2dp"
+    tools:ignore="SmallSp,ContentDescription,UseCompoundDrawables">
 
     <RelativeLayout
         android:id="@+id/item_dynamic_author_lay"
@@ -15,8 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="3dp"
         android:clickable="true"
@@ -83,9 +85,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_dynamic_dynamic"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:layout_marginBottom="2dp"
         android:baselineAligned="false"
         android:orientation="horizontal">
