--- a/app/src/main/res/layout/item_recommend.xml
+++ b/app/src/main/res/layout/item_recommend.xml
@@ -9,9 +9,10 @@
     android:clickable="true"
     android:focusable="true"
     android:paddingBottom="1dp"
-    android:paddingLeft="19dp"
-    android:paddingRight="19dp"
-    android:paddingTop="1dp">
+    android:paddingLeft="@dimen/dimen_19_10"
+    android:paddingRight="@dimen/dimen_19_10"
+    android:paddingTop="1dp"
+    tools:ignore="ContentDescription,SmallSp">
 
     <ImageView
         android:id="@+id/rc_video_img"
@@ -31,7 +32,8 @@
         android:layout_alignParentBottom="false"
         android:background="@drawable/shape_bg_recommend_video_time"
         android:gravity="end"
-        android:paddingRight="2dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
         android:textColor="@color/white"
         android:textSize="10sp"
         tools:text="1:11" />
