--- a/app/src/main/res/layout/item_search_video.xml
+++ b/app/src/main/res/layout/item_search_video.xml
@@ -2,12 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_search_video_lay"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
+    android:descendantFocusability="blocksDescendants"
     android:focusable="true"
+    android:paddingLeft="@dimen/dimen_19_10"
+    android:paddingTop="1dp"
+    android:paddingRight="@dimen/dimen_19_10"
     android:paddingBottom="1dp"
     android:paddingLeft="19dp"
     android:paddingRight="19dp"
