--- a/app/src/main/res/layout/item_select_part.xml
+++ b/app/src/main/res/layout/item_select_part.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="3dp"
-    android:paddingLeft="22dp"
-    android:paddingRight="22dp"
+    android:focusable="false"
+    android:paddingLeft="@dimen/dimen_22_10"
     android:paddingTop="3dp"
-    android:focusable="false">
+    android:paddingRight="@dimen/dimen_22_10"
+    android:paddingBottom="3dp">
 
     <TextView
         android:id="@+id/sp_item_text"
