--- a/app/src/main/res/layout/widget_article_return_top.xml
+++ b/app/src/main/res/layout/widget_article_return_top.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    tools:ignore="ContentDescription">
 
     <ImageView
         android:layout_width="24dp"
