--- a/app/src/main/res/layout/widget_dynamic_article.xml
+++ b/app/src/main/res/layout/widget_dynamic_article.xml
@@ -10,8 +10,8 @@
         android:id="@+id/dynamic_article_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:layout_marginBottom="2dp"
         android:clickable="true"
         android:focusable="true">
@@ -38,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dynamic_article_author"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginStart="@dimen/dimen_19_11"
+        android:layout_marginEnd="@dimen/dimen_19_11"
         android:layout_marginBottom="2dp"
         android:textSize="13sp"
         app:etv_MaxLinesOnShrink="6" />
@@ -48,9 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/dynamic_article_dynamic"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
-        app:cardBackgroundColor="?attr/colorBackgroundColor"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
+        app:cardBackgroundColor="?android:attr/colorBackground"
         app:cardCornerRadius="3dp"
         app:cardElevation="0dp">
 
