--- a/app/src/main/res/layout/widget_dynamic_favor.xml
+++ b/app/src/main/res/layout/widget_dynamic_favor.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:ignore="SmallSp,ContentDescription">
 
     <LinearLayout
         android:id="@+id/dynamic_favor_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:layout_marginBottom="2dp"
         android:clickable="true"
         android:focusable="true"
@@ -36,9 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dynamic_favor_author"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
-        app:cardBackgroundColor="?attr/colorBackgroundColor"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
+        app:cardBackgroundColor="?android:attr/colorBackground"
         app:cardCornerRadius="3dp"
         app:cardElevation="0dp">
 
