--- a/app/src/main/res/layout/widget_dynamic_unknown.xml
+++ b/app/src/main/res/layout/widget_dynamic_unknown.xml
@@ -6,8 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="@dimen/dimen_18_10"
+        android:layout_marginEnd="@dimen/dimen_18_10"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:padding="10dp">
