--- a/app/src/main/res/layout/widget_loading.xml
+++ b/app/src/main/res/layout/widget_loading.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="12dp">
+    android:gravity="center_horizontal"
+    android:paddingBottom="@dimen/dimen_8_4">
 
     <TextView
         android:id="@+id/wid_load_text"
