--- a/app/src/main/res/layout/widget_select_part_tip.xml
+++ b/app/src/main/res/layout/widget_select_part_tip.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingLeft="28dp"
-        android:paddingRight="28dp"
+        android:paddingLeft="@dimen/dimen_28_10"
+        android:paddingRight="@dimen/dimen_28_10"
         android:textSize="12sp" />
 
 </RelativeLayout>
