--- a/app/src/main/res/layout/widget_title.xml
+++ b/app/src/main/res/layout/widget_title.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/title_layout"
     android:layout_width="match_parent"
-    android:layout_height="33dp"
+    android:layout_height="@dimen/titleHeight"
     android:background="?attr/colorTitleBackground"
     android:gravity="center_vertical"
-    android:paddingTop="10dp"
-    android:paddingBottom="4dp"
+    android:paddingTop="@dimen/dimen_10_4"
+    android:paddingBottom="@dimen/dimen_4_2"
     tools:ignore="ContentDescription">
 
     <ViewFlipper
@@ -19,14 +19,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
     </ViewFlipper>
 
     <ImageView
         android:id="@+id/title_extraicon"
         android:layout_width="12dp"
         android:layout_height="19dp"
-        android:layout_toStartOf="@+id/title_title"
+        android:layout_toStartOf="@id/title_title"
         android:rotation="90"
         android:src="@drawable/icon_extra" />
 
@@ -34,7 +34,7 @@
         android:id="@+id/title_extraicon2"
         android:layout_width="12dp"
         android:layout_height="19dp"
-        android:layout_toEndOf="@+id/title_title"
+        android:layout_toEndOf="@id/title_title"
         android:rotation="270"
         android:src="@drawable/icon_extra" />
 </RelativeLayout>
