--- a/app/src/main/res/layout/activity_order_menu.xml
+++ b/app/src/main/res/layout/activity_order_menu.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorTitleBackground">
 
-    <ListView
-        android:id="@+id/menu_listview"
+    <com.mobeta.android.dslv.DragSortListView
+        android:id="@+id/order_menu_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:divider="@null"
-        android:dividerHeight="0dp"
-        android:listSelector="@android:color/transparent"
-        android:paddingTop="@dimen/dimen_25_10"
-        android:paddingBottom="@dimen/dimen_25_10" />
+        app:drag_enabled="true"
+        app:drag_start_mode="onLongPress"
+        app:float_background_color="#00000000"
+        app:sort_enabled="true"
+        app:use_default_controller="true" />
 
 </RelativeLayout>
